# stonefish_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml  release.yml
include/stonefish_ros/: ROSInterface.h  ROSScenarioParser.h  ROSSimulationManager.h
src/: ROSInterface.cpp  ROSScenarioParser.cpp  ROSSimulationManager.cpp  parsed_simulator.cpp
