<?xml version="1.0"?>
<package>
	<name>stonefish_ros</name>
	<version>1.0.0</version>
	<description>The stonefish_ros package</description>
	<maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
	<license>GPL-3.0</license>

	<author email="patryk.cieslak@udg.edu">Patryk Cieslak</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>cola2_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf_conversions</build_depend>
	<build_depend>opengl</build_depend>
	<build_depend>sdl2</build_depend>
	<build_depend>libfreetype6-dev</build_depend>
	<build_depend>libglew-dev</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>cola2_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tf_conversions</run_depend>
	<run_depend>opengl</run_depend>
	<run_depend>sdl2</run_depend>
	<run_depend>libfreetype6</run_depend>
	<run_depend>libglew-dev</run_depend>
  <export>
  </export>
</package>
